; ModuleID = '/home/carl/AnghaBench/libgit2/tests/submodule/extr_escape.c_find_evil.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/submodule/extr_escape.c_find_evil.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EVIL_SM_NAME = common dso_local global i32 0, align 4
@EVIL_SM_NAME_WINDOWS_UNESC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*)* @find_evil to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_evil(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** %7, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @GIT_UNUSED(i32* %10)
  %12 = load i32, i32* @EVIL_SM_NAME, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @git__strcmp(i32 %12, i8* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %3
  %17 = load i32, i32* @EVIL_SM_NAME_WINDOWS_UNESC, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @git__strcmp(i32 %17, i8* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %16, %3
  %22 = load i32*, i32** %7, align 8
  store i32 1, i32* %22, align 4
  br label %23

23:                                               ; preds = %21, %16
  ret i32 0
}

declare dso_local i32 @GIT_UNUSED(i32*) #1

declare dso_local i32 @git__strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
